--- a/KRTT/AndroidManifest.xml
+++ b/KRTT/AndroidManifest.xml
@@ -12,6 +12,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
     <application
+        android:label="KRTT"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
