--- a/KRTT/.classpath
+++ b/KRTT/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="libs/jackson-core-2.4.2.jar"/>
 	<classpathentry kind="lib" path="libs/jackson-databind-2.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/jackson-annotations-2.4.0.jar"/>
+	<classpathentry kind="lib" path="libs/androidmarketapi-0.6.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
